test/ui/test/packages/undefined-distributed-packages/package.stderr
error: could not load the dependency ‘who’
   ┌─ ${DISTRIBUTED_LIBRARIES_FOLDER}/dis/package.metadata
   │
   ├─ ${TEST_FOLDER}/packages/undefined-distributed-packages/package.metadata:13:13
   │
13 │             who: { component: "dis", provider: distribution },
   │             ═══
   │
  note: No such file or directory (os error 2)

error: could not load the dependency ‘kore’
   ┌─ ${DISTRIBUTED_LIBRARIES_FOLDER}/kore/package.metadata
   │
   ├─ ${TEST_FOLDER}/packages/undefined-distributed-packages/package.metadata:11:13
   │
11 │             kore: { provider: distribution },
   │             ════
   │
  note: No such file or directory (os error 2)

error: could not load the dependency ‘core’
   ┌─ ${DISTRIBUTED_LIBRARIES_FOLDER}/kore/package.metadata
   │
   ├─ ${TEST_FOLDER}/packages/undefined-distributed-packages/package.metadata:12:13
   │
12 │             core: { component: kore, provider: distribution },
   │             ════
   │
  note: No such file or directory (os error 2)

error: aborting due to 3 previous errors

