test/ui/test/packages/undefined-distributed-packages/package.metadata
# TEST fail check

name: shenanigans,
version: "1.1.1",

components: {
    shenanigans: {
        type: library,
        path: "somewhere",

        dependencies: {
            kore: { provider: distribution },
            core: { component: kore, provider: distribution },
            who: { component: "dis", provider: distribution },
        }
    }
},
